--- a/index.html
+++ b/index.html
@@ -144,14 +144,15 @@
                     <span class="text-transparent bg-clip-text mono-gradient">Red Team</span> Offensive Matrix
                 </h1>
                 
-                <!-- CORRECTED: Profile Picture path is now set to ./image/image.png --><div class="my-8 animate-fade-in-up" style="animation-delay: 0.6s;">
-                    <!-- 
-                        FIXED PATH: Updated from ./images/profile.jpg to match your directory structure 
-                        of /my_website/image/image.png
-                    --><img src="./image/image.png" 
-                        onerror="this.onerror=null; this.src='https://placehold.co/160x160/222/FFF?text=Brijesh';"
+                <!-- Profile Picture and Name --><div class="my-8 animate-fade-in-up" style="animation-delay: 0.6s;">
+                    <!-- Increased size from w-40 h-40 to w-48 h-48 --><img src="./image/image.png" 
+                        onerror="this.onerror=null; this.src='https://placehold.co/192x192/222/FFF?text=Brijesh';"
                         alt="Brijesh Babu K" 
-                        class="mx-auto w-40 h-40 object-cover rounded-full border-4 border-white shadow-lg transition duration-500 hover:scale-105">
+                        class="mx-auto w-48 h-48 object-cover rounded-full border-4 border-white shadow-lg transition duration-500 hover:scale-105">
+                    
+                    <!-- Added name below the image --><h2 class="text-3xl font-bold mt-4 text-white">
+                        Brijesh Babu K
+                    </h2>
                 </div>
 
                 <!-- Subheading --><p class="text-xl sm:text-2xl text-gray-400 mb-10 animate-fade-in-up" style="animation-delay: 0.8s;">
