--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </h1>
                 
                 <!-- Profile Picture and Name --><div class="my-8 animate-fade-in-up" style="animation-delay: 0.6s;">
-                    <!-- Increased size from w-40 h-40 to w-48 h-48 --><img src="./image/image.png" 
+                    <!-- Increased size and CORRECTED PATH --><img src="./image/image.png" 
                         onerror="this.onerror=null; this.src='https://placehold.co/192x192/222/FFF?text=Brijesh';"
                         alt="Brijesh Babu K" 
                         class="mx-auto w-48 h-48 object-cover rounded-full border-4 border-white shadow-lg transition duration-500 hover:scale-105">
@@ -179,8 +179,12 @@
                         <p class="text-lg text-gray-300 mb-4">
                             I am currently pursuing my B.E. in Electronics and Communication Engineering at R.M.K. Engineering College. My focus is on the intersection of hardware, signals, and security, driven by a desire to build <strong class="text-terminal-green">robust and secure systems</strong>.
                         </p>
+                        <!-- FIX: Merged text, colored key terms green, removed asterisks -->
                         <p class="text-lg text-gray-300 mb-4">
-                            My project work spans from developing high-level **Python APIs (FastAPI)** to low-level signal processing with **BladeRF SDR** and conducting critical network analyses using **mitmproxy** and **Wireshark**.
+                            My project work spans from developing high-level 
+                            <span class="text-terminal-green">Python APIs (FastAPI)</span> to low-level signal processing with 
+                            <span class="text-terminal-green">BladeRF SDR</span> and conducting critical network analyses using 
+                            <span class="text-terminal-green">mitmproxy</span> and <span class="text-terminal-green">Wireshark</span>.
                         </p>
                         <p class="text-lg text-gray-300">
                             I thrive on challenges that require both software proficiency and hardware understanding, particularly in real-time data analysis and security research.
@@ -209,7 +213,7 @@
 
             <!-- Skills Section --><section id="skills" class="py-12 animate-fade-in-up">
                 <h2 class="text-3xl font-bold mb-10 border-b border-gray-700 pb-4 text-center">
-                    <span class="text-terminal-green font-mono">0110.</span> Core Competencies
+                    <!-- FIX: Changed 0110. to 01. for consistent numbering --><span class="text-terminal-green font-mono">01.</span> Core Competencies
                 </h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     
