--- a/index.html
+++ b/index.html
@@ -180,8 +180,13 @@
                     </h2>
                 </div>
 
-                <!-- Subheading --><p class="text-xl sm:text-2xl text-gray-400 mb-10 animate-fade-in-up" style="animation-delay: 0.8s;">
-                    Applying offensive security principles to **Packet Analysis**, **Python-based Automation**, and **Embedded System** vulnerability research.
+                <!-- Subheading -->
+                <!-- FIX: Removed asterisks and applied green styling to keywords for better UI/UX -->
+                <p class="text-xl sm:text-2xl text-gray-400 mb-10 animate-fade-in-up" style="animation-delay: 0.8s;">
+                    Applying offensive security principles to 
+                    <span class="text-terminal-green">Packet Analysis</span>, 
+                    <span class="text-terminal-green">Python-based Automation</span>, and 
+                    <span class="text-terminal-green">Embedded System</span> vulnerability research.
                 </p>
                 <a href="#contact" class="inline-flex items-center justify-center px-10 py-3 border border-transparent text-lg font-semibold rounded-full shadow-lg text-black bg-white hover:bg-gray-300 transition duration-300 transform hover:scale-105 shadow-white/50 animate-fade-in-up" style="animation-delay: 1s;">
                     <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
