--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                 </h1>
                 
                 <!-- Profile Picture and Name --><div class="my-8 animate-fade-in-up" style="animation-delay: 0.6s;">
-                    <!-- Increased size and CORRECTED PATH --><img src="./image/image.png" 
+                    <!-- Increased size and CORRECTED PATH (using encodeURIComponent for safety) -->
+                    <img src="./image/WhatsApp%20Image%202025-11-06%20at%208.47.01%20PM.jpeg" 
                         onerror="this.onerror=null; this.src='https://placehold.co/192x192/222/FFF?text=Brijesh';"
                         alt="Brijesh Babu K" 
                         class="mx-auto w-48 h-48 object-cover rounded-full border-4 border-white shadow-lg transition duration-500 hover:scale-105">
