--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
              white-space: nowrap;
              overflow: hidden; /* Hide any overflow if necessary */
         }
+        /* NEW: CSS for Zooming and Centering Profile Image */
+        .profile-image-zoom {
+            object-fit: cover;
+            /* Adjust object-position to pull the focus slightly up/center-top */
+            object-position: center top; 
+            width: 14rem; /* Increased size to 56/4 = 14rem, or 192px/3 = 48 -> 12rem, 16 * 12 = 192px */
+            height: 14rem; /* 56 x 56 pixels wide */
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -192,11 +200,11 @@
                 </h1>
                 
                 <!-- Profile Picture and Name --><div class="my-8 animate-fade-in-up" style="animation-delay: 0.6s;">
-                    <!-- Increased size and CORRECTED PATH (using encodeURIComponent for safety) -->
+                    <!-- FIX: Increased size and applied object-position for zoom/centering -->
                     <img src="./image/WhatsApp%20Image%202025-11-06%20at%208.47.01%20PM.jpeg" 
                         onerror="this.onerror=null; this.src='https://placehold.co/192x192/222/FFF?text=Brijesh';"
                         alt="Brijesh Babu K" 
-                        class="mx-auto w-48 h-48 object-cover rounded-full border-4 border-white shadow-lg transition duration-500 hover:scale-105">
+                        class="mx-auto profile-image-zoom rounded-full border-4 border-white shadow-lg transition duration-500 hover:scale-105">
                     
                     <!-- Added name below the image --><h2 class="text-3xl font-bold mt-4 text-white">
                         Brijesh Babu K
