--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         /* NEW: CSS for Zooming and Centering Profile Image */
         .profile-image-zoom {
             object-fit: cover;
-            /* FIX: Adjusted object-position to pull the subject slightly left and center top for perfect centering */
-            object-position: 55% top; 
+            /* FIX: Adjusted object-position to 60% top to shift the subject further left and perfectly center */
+            object-position: 60% top; 
             width: 14rem; /* Increased size to 56/4 = 14rem, or 192px/3 = 48 -> 12rem, 16 * 12 = 192px */
             height: 14rem; /* 56 x 56 pixels wide */
         }
