--- a/index.html
+++ b/index.html
@@ -342,8 +342,9 @@
                             <h3 class="text-2xl font-semibold text-white">Intern - Precision Infomatic</h3>
                             <p class="text-sm text-gray-500 mb-3">June 2025 - July 2025 | Chennai</p>
                             <ul class="list-disc list-inside text-gray-300 space-y-2">
-                                <li>Gained practical exposure to **biometrics-focused projects** with hands-on technical training.</li>
-                                <li>Developed skills in **embedded systems integration** and applying security principles to real-world hardware.</li>
+                                <!-- FIX: Removed ** and added text-terminal-green span -->
+                                <li>Gained practical exposure to <span class="text-terminal-green">biometrics-focused projects</span> with hands-on technical training.</li>
+                                <li>Developed skills in <span class="text-terminal-green">embedded systems integration</span> and applying security principles to real-world hardware.</li>
                             </ul>
                         </div>
                     </div>
@@ -354,8 +355,9 @@
                             <h3 class="text-2xl font-semibold text-white">Intern - Nirloba IT Pvt Ltd</h3>
                             <p class="text-sm text-gray-500 mb-3">May 2024 - June 2024</p>
                             <ul class="list-disc list-inside text-gray-300 space-y-2">
-                                <li>Focused on **embedded systems exposure** through structured project-based learning.</li>
-                                <li>Practiced core concepts of **hardware-software integration** and system programming fundamentals.</li>
+                                <!-- FIX: Removed ** and added text-terminal-green span -->
+                                <li>Focused on <span class="text-terminal-green">embedded systems exposure</span> through structured project-based learning.</li>
+                                <li>Practiced core concepts of <span class="text-terminal-green">hardware-software integration</span> and system programming fundamentals.</li>
                             </ul>
                         </div>
                     </div>
@@ -371,9 +373,9 @@
                     <!-- Project 1: Menaminiki AI --><div class="bg-[#111111] p-6 rounded-xl shadow-2xl transition duration-500 card-hover animate-fade-in-up" style="animation-delay: 0.2s;">
                         <p class="text-4xl text-white mb-3">🤖</p>
                         <h3 class="text-xl font-semibold text-white mb-2">Menaminiki AI Chatbot</h3>
-                        <p class="text-xs text-gray-500 font-medium mb-3">Python | FastAPI | MongoDB Atlas</p>
+                        <p class="text-xs text-gray-500 font-medium mb-3"><span class="text-terminal-green">Python</span> | <span class="text-terminal-green">FastAPI</span> | <span class="text-terminal-green">MongoDB Atlas</span></p>
                         <p class="text-gray-400 mb-4 text-sm">
-                            A cross-platform food/recipe chatbot using **FastAPI** for API development and **MongoDB Atlas** for data persistence. Demonstrates API expertise and Linux-native deployment.
+                            A cross-platform food/recipe chatbot using <span class="text-terminal-green">FastAPI</span> for API development and <span class="text-terminal-green">MongoDB Atlas</span> for data persistence. Demonstrates API expertise and Linux-native deployment.
                         </p>
                         <a href="https://github.com/Brijeshzzz" target="_blank" class="text-sm font-medium text-terminal-green hover:text-white transition duration-300 flex items-center">
                             View Code
@@ -384,9 +386,9 @@
                     <!-- Project 2: Remote Sensing using SDR --><div class="bg-[#111111] p-6 rounded-xl shadow-2xl transition duration-500 card-hover animate-fade-in-up" style="animation-delay: 0.4s;">
                         <p class="text-4xl text-terminal-green mb-3">📡</p>
                         <h3 class="font-bold text-xl text-white mb-2">SDR Remote Sensing</h3>
-                        <p class="text-xs text-gray-500 font-medium mb-3">BladeRF Micro | I/Q Signal | Deep Learning</p>
+                        <p class="text-xs text-gray-500 font-medium mb-3"><span class="text-terminal-green">BladeRF Micro</span> | <span class="text-terminal-green">I/Q Signal</span> | <span class="text-terminal-green">Deep Learning</span></p>
                         <p class="text-gray-400 mb-4 text-sm">
-                            Implemented fire, smoke, and motion detection using the **BladeRF SDR** by analyzing raw **I/Q sample data**. Focuses on signal processing, feature extraction, and classification.
+                            Implemented fire, smoke, and motion detection using the <span class="text-terminal-green">BladeRF SDR</span> by analyzing raw <span class="text-terminal-green">I/Q sample data</span>. Focuses on signal processing, feature extraction, and classification.
                         </p>
                         <a href="https://github.com/Brijeshzzz" target="_blank" class="text-sm font-medium text-terminal-green hover:text-white transition duration-300 flex items-center">
                             View Code
@@ -397,9 +399,9 @@
                     <!-- Project 3: HTTPS Monitoring & Decryption --><div class="bg-[#111111] p-6 rounded-xl shadow-2xl transition duration-500 card-hover animate-fade-in-up" style="animation-delay: 0.6s;">
                         <p class="text-4xl text-white mb-3">🔓</p>
                         <h3 class="text-xl font-semibold text-white mb-2">HTTPS Traffic Decryption</h3>
-                        <p class="text-xs text-gray-500 font-medium mb-3">mitmproxy | Wireshark | SSL/TLS</p>
+                        <p class="text-xs text-gray-500 font-medium mb-3"><span class="text-terminal-green">mitmproxy</span> | <span class="text-terminal-green">Wireshark</span> | <span class="text-terminal-green">SSL/TLS</span></p>
                         <p class="text-gray-400 mb-4 text-sm">
-                            Security research demonstrating interception and decryption of HTTPS traffic using **Kali Linux** and **mitmproxy**, including **SSLKEYLOGFILE** for deep packet inspection.
+                            Security research demonstrating interception and decryption of HTTPS traffic using <span class="text-terminal-green">Kali Linux</span> and <span class="text-terminal-green">mitmproxy</span>, including <span class="text-terminal-green">SSLKEYLOGFILE</span> for deep packet inspection.
                         </p>
                         <a href="https://github.com/Brijeshzzz" target="_blank" class="text-sm font-medium text-terminal-green hover:text-white transition duration-300 flex items-center">
                             View Code
