--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="console-text">console.log("Sorry! Wrong Link!");</div>
             
             <p class="sub-msg">
-                I think I clicked the wrong button...<br>
+                I think U clicked the wrong button...<br>
                 Your system is safe. It was just a simulation.
             </p>
 
